--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,25 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,400&display=swap");
+
+body {
+  font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
+}
+
+main {
+  position: relative;
+  min-height: 100vh;
+  background-color: #edf3f9;
+}
+
+.navbar .navbar-toggler {
+  top: 1rem;
+  right: 1rem;
+}
+
+.sticky-top {
+  z-index: 0 !important;
+}
+
 .search-input {
   border-radius: 50px;
   font-weight: bold;
@@ -12,9 +34,52 @@
   height: 45px;
 }
 
+.btn-round {
+  min-width: 120px;
+  border-radius: 50px;
+}
+
 .red-icon {
   background-color: red;
   color: white;
   padding: 15px;
   border-radius: 90%;
+}
+
+.img-thumbnail {
+  width: 150px;
+  border-radius: 100%;
+}
+
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 48px);
+  padding-top: 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.sidebar {
+  background-color: #17264c !important;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  padding: 48px 0 0;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+@media (max-width: 767.98px) {
+  .sidebar {
+    top: 5rem;
+  }
 }
