--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,9 +71,9 @@ main {
 }
 
 footer {
-  bottom: 0;
+  background-color: #161921;
   width: 100%;
-  height: 2.5rem;
+  /* height: 2.5rem; */
 }
 
 @media (max-width: 767.98px) {
